Code Improvements: - Move node validation to add/edit node modal - Fix issue with deleting nodes - Various code enhancements for readability - Ensure code works with auto-layout - Ensure delete functionality doesn't appear for non-admins
Fixes #123

--- a/templates/tapestry.css
+++ b/templates/tapestry.css
@@ -71,7 +71,7 @@ body {
 @media (min-width:1000px) {
 	#tapestry-controls-wrapper {
 		position: absolute;
-		margin-top: -30px;
+		margin-top: -60px;
 		right: 0;
 	}
 }
@@ -278,6 +278,10 @@ body {
     fill: #11a6d8;
 }
 
+.node {
+    cursor: pointer;
+}
+
 .node .meta {
     color: white;
     min-height: 100%;
@@ -329,7 +333,7 @@ body {
     stroke-opacity: 5;
 }
 
-.link-lines{
+.link-lines.deletable {
     cursor: pointer;
 }
 
